--- a/life3/static/css/common.css
+++ b/life3/static/css/common.css
@@ -1,3 +1,24 @@
+.body {
+    background: #070017;
+    padding: 5%;
+}
+
+.header-title-font {
+    color: #ded9d1;
+}
+
+.life-card-date {
+    color: #565850;
+    padding-left: 10px;
+}
+
+.life-card-title {
+    color: #e0e6cf;
+    padding-left: 10px;
+    font-size: 17px;
+    vertical-align: middle;
+}
+
 .life-card-padding {
     padding: 15px 10px 15px 10px;
 }
