--- a/life3/static/templates/home.html
+++ b/life3/static/templates/home.html
@@ -11,7 +11,7 @@
           crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/common.css">
 </head>
-<body>
+<body class="body">
     <div id="root"></div>
     <script type="text/javascript" charset="utf-8" src="/assets/home-min.js"></script>
 </body>
