--- a/life3/static/templates/login.html
+++ b/life3/static/templates/login.html
@@ -9,55 +9,59 @@
           crossorigin="anonymous">
 </head>
 <body>
-    <script>
-      window.fbAsyncInit = function() {
+<script>
+
+    // Facebook SDK init
+    window.fbAsyncInit = function () {
         FB.init({
-          appId            : '501258146921514',
-          autoLogAppEvents : true,
-          xfbml            : true,
-          version          : 'v2.10'
+            appId: '501258146921514',
+            autoLogAppEvents: true,
+            xfbml: true,
+            version: 'v2.10'
         });
         FB.AppEvents.logPageView();
-        FB.getLoginStatus(function(response) {
-            console.log(response.status);
-            if (response.status == 'connected') {
-                console.log(response.authResponse.accessToken);
-                console.log(response.authResponse.expiresIn);
-                console.log(response.authResponse.signedRequest);
-                console.log(response.authResponse.userID);
-            }
-        });
-      };
+        checkFacebookLoginStatus();
+    };
 
-      (function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = 'https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.10';
-          // debug mode
-          //js.src = 'https://connect.facebook.net/en_US/sdk/debug.js';
-          fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
+    // Get Facebook login button info
+    (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = 'https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.10';
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
 
-    <script>
-        function checkLoginState() {
-          FB.getLoginStatus(function(response) {
-              console.log('status: ' + response.status);
+    var checkFacebookLoginStatus = () => FB.getLoginStatus(callbackForLoginStatus);
+
+    var callbackForLoginStatus = response => {
+        console.log('status: ' + response.status);
             if (response.status == 'connected') {
                 console.log('accessToken: ' + response.authResponse.accessToken);
                 console.log('expiresIn: ' + response.authResponse.expiresIn);
                 console.log('userID: ' + response.authResponse.userID);
-                FB.api('/me', function(response) {
-                  console.log('Successful login for: ' + response.name);
+                FB.api('/me', function (response) {
+                    // TODO: need email and user image url
+                    let userProfile = {
+                        'userId': response.authResponse.userID,
+                        'userName': response.name,
+                        //'userEmail': response.email,
+                        //'userImage': response.userImage,
+                    }
+
+                    // TODO: POST /login/api/auth/
+                    console.log('sending profile: ' + userProfile);
                 });
             }
-          });
-        }
-    </script>
+    };
 
-    <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with"
-         data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false" onlogin="checkLoginState();"></div>
+
+</script>
+
+<div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with"
+     data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"
+     onlogin="checkFacebookLoginStatus();"/>
 
 </body>
 </html>
