--- a/life3/static/templates/login.html
+++ b/life3/static/templates/login.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Life 3.0 Login</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/login.css">
+    <link rel="stylesheet" href="//fontawesome.io/assets/font-awesome/css/font-awesome.min.css">
 </head>
 <body class="body">
     <div id="root"></div>
